--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ background: url('images/bg.jpg') no-repeat fixed;
         </div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="https://animasu.org/">
+            <a class="thumbnail" href="https://animasu.vip/">
                 <img class="img-responsive" src="images/animasu.png" alt="">
             </a>
         </div>
