--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ background: url('images/bg.jpg') no-repeat fixed;
                 </div>
                 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="https://nyaanime.com/">
-                <img class="img-responsive" src="images/nyaanime.png" alt="">
+            <a class="thumbnail" href="https://194.163.183.129/">
+                <img class="img-responsive" src="images/samehadaku.png" alt="">
             </a>
         </div>
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
